--- a/frontend/src/Customer/style.css
+++ b/frontend/src/Customer/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Roboto';
+    font-family: 'Comfortaa';
 }
 
 body{
@@ -10,7 +10,6 @@ body{
 }
 
 .navbar{
-    box-shadow: 0 1px 10px #999;
     font-weight: 500;
     font-size: 18px;
 }
@@ -19,79 +18,18 @@ body{
     margin: 50px 0;
 }
 
-
-
-
-/*****Furnish the grespace ka slider******/
-#slider{
-    background-color: #EFEFEF;
-}
-#slider h2{
-        color: #333;
-        margin-top: 40px;
-        text-align:center;
-        font-size: 40px;
-        font-weight: 550;
-}
-#slider hr{
-          width: 140px;
-          height: 2px;
-          margin-left: auto;
-          margin-right: auto;
-          background-color: #696969;
-          border: 0 none;
-          margin-bottom: 50px;
-        }
-#slider .card img{
-    width: 290px;
-    height: 250px;
+.product-card{
+    position: relative;
 }
 
-.slider{
-    margin: 20px 0 50px;
-}
-
-.slider button:not(:disabled) {
-    cursor: pointer;
-    margin-bottom: 50px ;
-    padding-right: -30px;
-    padding: 6px 25px 10px 6px;
-    width: 32px;
-    height: 30px;
-    display: none;
+.add-to-wishlist{
+    position: absolute;
+    top:10px;
+    right:10px;
+    color:#f71138;
 }
 
 
-.slider img{
-    width: 350px;
-    height: 260px;
-    /*box-shadow: 0px 2px 10px 1px rgba(0, 0, 0, 1);*/
-    border-radius: 10px;
-    padding:20px 20px;
-}
-
-
-/*****Furnish the grespace ka gallery******/
-.gallery{
-    padding-top: 70px; 
-    padding-bottom: 60px;
-    background-color: #EFEFEF;
-}
-.gallery h2{
-    color: #333;
-    margin-top: 40px;
-    text-align: center;
-    font-size: 40px;
-    font-weight: 550;
-}
-.gallery hr{
-    width: 110px;
-    height: 1.5px;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: #696969;
-    border: 0 none;
-}
 #home .home-container .text-container {
     padding: 70px 0;
     margin: 0 35px;
@@ -114,9 +52,6 @@ body{
 
 /*********FURNITURE PAGE********/
 
-#home2{
-
-}
 .title-header{
      color: #333;
     margin-top: 50px;
@@ -138,13 +73,24 @@ body{
 }
 .navicon .navbar-icon{
     margin: 0px 12px;
+    
 }
 #wishlist-icon{
-    color: #f71138;
+    color: #cccccc;
 }
 #cart-icon{
-    color: #007BFF;
+    color: #cccccc;
 }
+#user-icon{
+    color: #cccccc;
+    font-size: 24px;
+}
+
+.dropdown-menu[data-bs-popper]{
+    right:0;
+    left:auto;
+}
+
 
 
 
@@ -159,12 +105,12 @@ body{
 .card{
     border-radius: 10px;
     text-align: center;
-    padding: 20px 20px;
-    margin: 20px 20px 30px;
-    height: 480px;
+    padding: 10px 10px;
+    margin: 10px 10px 20px;
+    height: 430px;
    
 }
-.card:hover{
+.card:hover, input:hover{
     cursor: pointer;
     box-shadow: -1px 6px 18px  rgba(170,170,170,0.5); 
 }
@@ -173,7 +119,66 @@ body{
     height: 300px;
 }
 
+.card-body {
+    flex: 1 1 auto;
+    padding: 0.1rem 0.1rem;
+}
 
+.input-lg-text{
+    width: 250px;
+    margin: 0.5rem;
+    padding: 0.5rem;
+    border: none;
+    border-radius: 7px;
+}
+
+.input-sm-text{
+    width: 125px;
+    margin: 0.5rem;
+    padding: 0.5rem;
+    border: none;
+    border-radius: 7px;
+    text-align: center;
+}
+
+select{
+    border:none;
+    margin: 0.5rem;
+    padding: 0.5rem;
+    border-radius: 7px;
+}
+
+input:focus, select:focus, option{
+    outline: none;
+  }
+
+
+.pagination{
+    justify-content: center;
+}
+
+.pageDisabled{
+    background-color: #fafafa;
+    width: 40px;
+    height: 50px;
+    border: 0;
+    border-radius: 5px;
+}
+
+.pageActive{
+    background-color: #6c757d;
+    color: #ffffff;
+    width: 40px;
+    border: 0;
+    border-radius: 5px;
+}
+
+.pageNo{
+    background-color: #dddddd;
+    width: 40px;
+    border: 0;
+    border-radius: 5px;
+}
 
 /**** Product Page ****/
 .prod-title{
@@ -196,4 +201,7 @@ body{
     color: green;
     font-weight: 600;
     font-size: 20px;
+}
+.checkout-product-card{
+    box-shadow: -1px 6px 18px  rgba(170,170,170,0.5); 
 }
