--- a/frontend/src/Customer/style.css
+++ b/frontend/src/Customer/style.css
@@ -24,6 +24,7 @@ body{
 
 .add-to-wishlist{
     position: absolute;
+    z-index: 1;
     top:10px;
     right:10px;
     color:#f71138;
@@ -204,4 +205,46 @@ input:focus, select:focus, option{
 }
 .checkout-product-card{
     box-shadow: -1px 6px 18px  rgba(170,170,170,0.5); 
+}
+
+.choose-color{
+    -webkit-appearance: none;
+    border: 1px;
+    height: 2.5rem;
+    width: 2.5rem;
+    margin: 0 0.5rem 0 0.5rem;
+    border-radius: 1.25rem;
+}
+
+.choose-color::-webkit-color-swatch {
+    border-radius: 1.25rem;
+    padding: 0;
+}
+
+.choose-color::-webkit-color-swatch-wrapper {
+    border-radius: 1.25rem;
+    padding: 0;
+  }
+
+.review-box{
+    padding: 10px;
+}
+
+.cart-box{
+    display: inline-block;
+    position: relative;
+}
+
+.cart-box span{
+    position: absolute;
+    top: -0.7rem;
+    right: -0.8rem;
+    background-color: rgb(31, 173, 255);
+    padding: 0.2rem;
+    font-size: 12px;
+    font-weight: 900;
+    height: 20px;
+    width: 20px;
+    text-align: center;
+    border-radius: 20px;
 }
