--- a/frontend/src/Customer/style.css
+++ b/frontend/src/Customer/style.css
@@ -207,26 +207,9 @@ input:focus, select:focus, option{
     box-shadow: -1px 6px 18px  rgba(170,170,170,0.5); 
 }
 
-.choose-color{
-    -webkit-appearance: none;
-    border: 1px;
-    height: 2.5rem;
-    width: 2.5rem;
-    margin: 0 0.5rem 0 0.5rem;
-    border-radius: 1.25rem;
-}
-
-.choose-color::-webkit-color-swatch {
-    border-radius: 1.25rem;
-    padding: 0;
-}
-
-.choose-color::-webkit-color-swatch-wrapper {
-    border-radius: 1.25rem;
-    padding: 0;
-  }
 
 .review-box{
+    position: relative;
     padding: 10px;
 }
 
@@ -247,4 +230,36 @@ input:focus, select:focus, option{
     width: 20px;
     text-align: center;
     border-radius: 20px;
+}
+
+
+.choose-color{
+    border: 0.5px solid black;
+    height: 2.5rem;
+    width: 2.5rem;
+    margin: 5px;
+    border-radius: 1.25rem;
+}
+
+input.choose-input-color{
+    border: 0.5px solid black;
+    height: 2.5rem;
+    width: 2.5rem;
+    margin: 5px;
+}
+
+input.choose-input-color:focus{
+    outline: none;
+}
+
+
+.choose-part{
+    display: inline-block;
+}
+
+.btn-proceed{
+    text-align: center;
+    background-color: #333333;
+    color: white;
+    border-radius: 10px;
 }
